@@ -119,7 +119,6 @@ class NmapImporter(QtCore.QThread):
             session.commit()
 
             for h in allHosts:  # create all OS, service and port objects that need to be created
-                                ## does not take into account different service versions?
                 self.tsLog("Processing h {ip}".format(ip=h.ip))
 
                 db_host = self.hostRepository.getHostInformation(h.ip)
@@ -138,7 +137,7 @@ class NmapImporter(QtCore.QThread):
 
                     if not db_os:
                         t_osObj = osObj(os.name, os.family, os.generation, os.osType, os.vendor, os.accuracy,
-                                        db_host.id)
+                            db_host.id)
                         session.add(t_osObj)
 
                     createOsNodesProgress = createOsNodesProgress + ((100.0 / hostCount) / 5)
@@ -154,26 +153,21 @@ class NmapImporter(QtCore.QThread):
                     s = p.getService()
 
                     if not (s is None):  # check if service already exists to avoid adding duplicates
-                        # print("            Found service {service} for port {port}".format(service=str(s.name),
-                        # port=str(p.portId)))
-                        # db_service = session.query(serviceObj).filter_by(name=s.name).filter_by(product=s.product).
-                        # filter_by(version=s.version).filter_by(extrainfo=s.extrainfo).
-                        # filter_by(fingerprint=s.fingerprint).first()
-                        db_service = session.query(serviceObj).filter_by(name=s.name).filter_by(product=s.product) \
-                            .first()
+                        print("Processing service result *********** name={0} prod={1} ver={2} extra={3} fing={4}" \
+                            .format(s.name, s.product, s.version, s.extrainfo, s.fingerprint))
+                        db_service = session.query(serviceObj).filter_by(hostId=db_host.id) \
+                            .filter_by(name=s.name).filter_by(product=s.product).filter_by(version=s.version) \
+                            .filter_by(extrainfo=s.extrainfo).filter_by(fingerprint=s.fingerprint).first()
                         if not db_service:
-                            # print("Did not find service *********** name={0} prod={1} ver={2} extra={3} fing={4}".
-                            # format(s.name, s.product, s.version, s.extrainfo, s.fingerprint))
-                            db_service = serviceObj(s.name, s.product, s.version, s.extrainfo, s.fingerprint)
+                            print("Did not find service *********** name={0} prod={1} ver={2} extra={3} fing={4}" \
+                                .format(s.name, s.product, s.version, s.extrainfo, s.fingerprint))
+                            db_service = serviceObj(s.name, db_host.id, s.product, s.version, s.extrainfo, s.fingerprint)
                             session.add(db_service)
-                    # else:
-                    # print("FOUND service *************** name={0}".format(db_service.name))
-
                     else:  # else, there is no service info to parse
                         db_service = None
                         # fetch the port
-                    db_port = session.query(portObj).filter_by(hostId=db_host.id).filter_by(portId=p.portId).filter_by(
-                        protocol=p.protocol).first()
+                    db_port = session.query(portObj).filter_by(hostId=db_host.id).filter_by(portId=p.portId) \
+                        .filter_by(protocol=p.protocol).first()
 
                     if not db_port:
                         # print("Did not find port *********** portid={0} proto={1}".format(p.portId, p.protocol))
@@ -200,10 +194,12 @@ class NmapImporter(QtCore.QThread):
                     for scr in p.getScripts():
                         self.tsLog("        Processing script obj {scr}".format(scr=str(scr)))
                         print("        Processing script obj {scr}".format(scr=str(scr)))
-                        db_port = session.query(portObj).filter_by(hostId=db_host.id).filter_by(
-                            portId=p.portId).filter_by(protocol=p.protocol).first()
-                        db_script = session.query(l1ScriptObj).filter_by(scriptId=scr.scriptId).filter_by(
-                            portId=db_port.id).first()
+                        db_port = session.query(portObj).filter_by(hostId=db_host.id) \
+                            .filter_by(portId=p.portId).filter_by(protocol=p.protocol).first()
+                        #db_script = session.query(l1ScriptObj).filter_by(scriptId=scr.scriptId) \
+                        #   .filter_by(portId=db_port.id).first()
+                        db_script = session.query(l1ScriptObj).filter_by(hostId=db_host.id) \
+                           .filter_by(portId=db_port.id).first()
 
                         if not db_script:  # if this script object doesn't exist, create it
                             t_l1ScriptObj = l1ScriptObj(scr.scriptId, scr.output, db_port.id, db_host.id)
@@ -211,8 +207,8 @@ class NmapImporter(QtCore.QThread):
                             session.add(t_l1ScriptObj)
 
                 for hs in h.getHostScripts():
-                    db_script = session.query(l1ScriptObj).filter_by(scriptId=hs.scriptId).filter_by(
-                        hostId=db_host.id).first()
+                    db_script = session.query(l1ScriptObj).filter_by(scriptId=hs.scriptId) \
+                        .filter_by(hostId=db_host.id).first()
                     if not db_script:
                         t_l1ScriptObj = l1ScriptObj(hs.scriptId, hs.output, None, db_host.id)
                         session.add(t_l1ScriptObj)
@@ -253,9 +249,9 @@ class NmapImporter(QtCore.QThread):
 
                 os_nodes = h.getOs()
                 for os in os_nodes:
-                    db_os = session.query(osObj).filter_by(hostId=db_host.id).filter_by(name=os.name).filter_by(
-                        family=os.family).filter_by(generation=os.generation).filter_by(osType=os.osType).filter_by(
-                        vendor=os.vendor).first()
+                    db_os = session.query(osObj).filter_by(hostId=db_host.id).filter_by(name=os.name) \
+                        .filter_by(family=os.family).filter_by(generation=os.generation).filter_by(osType=os.osType) \
+                        .filter_by(vendor=os.vendor).first()
 
                     db_os.osAccuracy = os.accuracy  # update the accuracy
 
@@ -290,10 +286,10 @@ class NmapImporter(QtCore.QThread):
                 for p in h.all_ports():
                     s = p.getService()
                     if not (s is None):
-                        # db_service = session.query(serviceObj).filter_by(name=s.name).filter_by(product=s.product).
-                        # filter_by(version=s.version).filter_by(extrainfo=s.extrainfo).
-                        # filter_by(fingerprint=s.fingerprint).first()
-                        db_service = session.query(serviceObj).filter_by(name=s.name).first()
+                        db_service = session.query(serviceObj).filter_by(hostId=db_host.id).filter_by(name=s.name). \
+                            filter_by(product=s.product).filter_by(version=s.version).filter_by(extrainfo=s.extrainfo). \
+                            filter_by(fingerprint=s.fingerprint).first()
+                        #db_service = session.query(serviceObj).filter_by(hostId=db_host.id).filter_by(name=s.name).first()
                     else:
                         db_service = None
                         # fetch the port
